syntax = "proto3";

package sf.substreams.injective.oracle.v1;

// Define the message for SetOraclePrice
message SetOraclePrice {
  string price_id = 1;
  double ema_price = 2;
  double ema_conf = 3;
  double conf = 4;
  int64 publish_time = 5; 
  PriceState price_state = 6;
}

message PriceState {
    double price = 1;   
    double cumulative_price = 2;
    int64 timestamp = 3; 
  }
